# msgcoin-bot

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  lemp.yaml  mysql.yaml  sqlx-data.json
.github/workflows/: upload-image.yaml
migrations/: 20230323124630_table.sql  20230324124215_welcome.sql
src/: main.rs
