[package]
name = "msgcoin-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.17"
serenity = "0.11.5"
sqlx = { version = "0.6.3", features = ["mysql", "runtime-tokio-rustls", "macros", "offline"] }
tokio = { version = "1.26.0", features = ["full"] }
